--- a/project_server/package.json
+++ b/project_server/package.json
@@ -9,6 +9,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@xmldom/xmldom": "^0.8.10",
+    "axios": "^1.6.6",
     "bcrypt": "^5.1.1",
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
@@ -16,6 +18,7 @@
     "express": "^4.18.2",
     "morgan": "^1.10.0",
     "mysql2": "^3.7.0",
-    "nunjucks": "^3.2.4"
+    "nunjucks": "^3.2.4",
+    "xpath": "^0.0.34"
   }
 }
