--- a/project_front/package.json
+++ b/project_front/package.json
@@ -10,13 +10,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "axios": "^1.6.5",
+    "axios": "^1.6.7",
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router": "^6.21.2",
     "react-router-dom": "^6.21.2",
-    "styled-component": "^2.8.0"
+    "styled-component": "^2.8.0",
+    "xml2js": "^0.6.2"
   },
   "devDependencies": {
     "@types/react": "^18.2.43",
