--- a/project_server/package.json
+++ b/project_server/package.json
@@ -10,7 +10,7 @@
   "license": "ISC",
   "dependencies": {
     "@xmldom/xmldom": "^0.8.10",
-    "axios": "^1.6.6",
+    "axios": "^1.6.7",
     "bcrypt": "^5.1.1",
     "chokidar": "^3.5.3",
     "cors": "^2.8.5",
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.7.0",
     "nunjucks": "^3.2.4",
+    "xml2js": "^0.6.2",
     "xpath": "^0.0.34"
   }
 }
