--- a/project_server/package.json
+++ b/project_server/package.json
@@ -19,6 +19,7 @@
     "morgan": "^1.10.0",
     "mysql2": "^3.7.0",
     "nunjucks": "^3.2.4",
+    "react-paginate": "^8.2.0",
     "xml2js": "^0.6.2",
     "xpath": "^0.0.34"
   }
