--- a/project_front/package.json
+++ b/project_front/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-paginate": "^8.2.0",
     "react-router": "^6.21.2",
     "react-router-dom": "^6.21.2",
     "styled-component": "^2.8.0",
